# Raylib_ECS

./: CMakeLists.txt  vcpkg.json
src/: main.cpp
src/render/: rendering.h
src/sim/: components.h  systems.h
src/util/: vecmath.h
